# Volxel

./: .gitignore  README.md  index.html  package.json  performance.txt  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite-plugin-glsl-include.ts  vite.config.ts
.github/: dependabot.yml
.github/workflows/: deploy.yml  update-drupal-module.yml
bundle/: package.json  tsconfig.json  vite.config.ts
bundle/src/: index.ts
daicom_preprocessor/: Cargo.toml
daicom_preprocessor/src/: brick.rs  buf3d.rs  dicom.rs  grid.rs  lib.rs  utils.rs
dicom_preprocessor/: Cargo.toml
dicom_preprocessor/src/: hdr.rs  lib.rs  utils.rs  zip.rs
public/: benchmark.json
src/: colorramp.ts  data.ts  histogramViewer.ts  index.css  main.ts  scene.ts  style.css  template.ts  util.ts  vite-env.d.ts
src/elements/: colorramp.ts  cubeDirection.ts  directionSelector.ts  histogramViewer.ts
src/representation/: grid.ts  volume.ts
src/shaders/: blit.frag  fragment.frag  random.glsl  utils.glsl  vertex.vert
volxel-3d-viewer/: package.json  tsconfig.json  vite.config.ts
volxel-3d-viewer/src/: common.ts  data.ts  index.ts  scene.ts  settings.ts  template.ts  util.ts  viewer.ts  worker.ts
volxel-3d-viewer/src/elements/: colorramp.ts  cubeDirection.ts  histogramViewer.ts  slider.ts
volxel-3d-viewer/src/representation/: environment.ts  grid.ts  scene.ts  volume.ts
volxel-3d-viewer/src/shaders/: blit.frag  clipFragment.frag  clipVertex.vert  envSetup.frag  environment.glsl  fragment.frag  random.glsl  sampling.glsl  utils.glsl  vertex.vert
volxel-3d-viewer/src/utils/: compute.ts  (+2 more)
(+4 files in other folders)
