[package]
name = "dicom_preprocessor"
version = "0.1.0"
authors = ["Erdragh <mail@erdragh.dev>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.104"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# dicom
dicom-core = "0.8.2"
dicom-object = "0.8.2"
dicom-pixeldata = { version = "0.8.2", features = ["image", "jpeg", "jpegxl", "native"] }
js-sys = "0.3.81"
glam = "0.30.8"
bytemuck = "1.23.2"
half = "2.6.0" # TODO: Remove this once f16 is stable in Rust
zip = { version = "5.1.1", default-features = false, features = ["bzip2", "deflate", "lzma", "deflate64", "ppmd", "zstd"] }
image = { version = "0.25.8", features = ["exr", "hdr"]}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"